Fix Bug 314799 - Author information is missing in some Atom articles

According to RFC 4287 [4.2.1]:

    If an atom:entry element does not contain atom:author elements, then
    the atom:author elements of the contained atom:source element are
    considered to apply.  In an Atom Feed Document, the atom:author
    elements of the containing atom:feed element are considered to apply
    to the entry if there are no atom:author elements in the locations
    described above.

REVIEW: 108878
BUG: 314799
FIXED-IN: 4.12.1